# ld54

./: .gitman.yml  CMakeLists.txt
data/shader/glsl/410/: object.fs  object.vs  terrain.fs
data/shader/glsl/460/: planet.vs  terrain.fs
include/: controls.hpp  physics.hpp  renderer.hpp  state.hpp
source/: Box.mtl  Bush.mtl  Gas.mtl  Health.mtl  Rock.mtl  Rock2.mtl  Store.mtl  Tote.mtl  Tree-tall.mtl  Truck.bbmodel  nickCarTest.bbmodel  tree.mtl  trees_Small.mtl
src/: car.cpp  main.cpp  physics.cpp  renderer.cpp  world.cpp
tests/: CMakeLists.txt  pair_id.cpp  world_normal.cpp
